k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: player-app-service
  namespace: player-app
spec:
  selector:
    app: player-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
